win32/include/CrashRpt.h

#define _CRASHRPT_H_
#define __reserved
#define __in
#define __in_opt
#define __out_ecount_z(x)
#define CRASHRPT_EXTERNC extern "C"
#define CRASHRPT_EXTERNC
#define CRASHRPTAPI(rettype) CRASHRPT_EXTERNC rettype WINAPI
#define CRASHRPT_VER 1403
typedef BOOL (CALLBACK *LPGETLOGFILE) (__reserved LPVOID lpvState);
#define CR_SEH_EXCEPTION                0    
#define CR_CPP_TERMINATE_CALL           1    
#define CR_CPP_UNEXPECTED_CALL          2    
#define CR_CPP_PURE_CALL                3    
#define CR_CPP_NEW_OPERATOR_ERROR       4    
#define CR_CPP_SECURITY_ERROR           5    
#define CR_CPP_INVALID_PARAMETER        6    
#define CR_CPP_SIGABRT                  7    
#define CR_CPP_SIGFPE                   8    
#define CR_CPP_SIGILL                   9    
#define CR_CPP_SIGINT                   10   
#define CR_CPP_SIGSEGV                  11   
#define CR_CPP_SIGTERM                  12   
typedef struct tagCR_EXCEPTION_INFO
{
    WORD cb;                   
    PEXCEPTION_POINTERS pexcptrs; 
    int exctype;               
    DWORD code;                
    unsigned int fpe_subcode;  
    const wchar_t* expression; 
    const wchar_t* function;   
    const wchar_t* file;       
    unsigned int line;         
    BOOL bManual;              
    HANDLE hSenderProcess;     
}
CR_EXCEPTION_INFO;
typedef CR_EXCEPTION_INFO* PCR_EXCEPTION_INFO;
#define CR_CB_STAGE_PREPARE      10  
#define CR_CB_STAGE_FINISH       20  
typedef struct tagCR_CRASH_CALLBACK_INFOW
{
    WORD cb;                            
	int nStage;                         
	LPCWSTR pszErrorReportFolder;       
    CR_EXCEPTION_INFO* pExceptionInfo;  
	LPVOID pUserParam;                  
	BOOL bContinueExecution;            
}
CR_CRASH_CALLBACK_INFOW;
typedef struct tagCR_CRASH_CALLBACK_INFOA
{
    WORD cb;                            
	int nStage;                         
	LPCSTR pszErrorReportFolder;        
    CR_EXCEPTION_INFO* pExceptionInfo;  
	LPVOID pUserParam;                  
	BOOL bContinueExecution;            
}
CR_CRASH_CALLBACK_INFOA;
typedef CR_CRASH_CALLBACK_INFOW CR_CRASH_CALLBACK_INFO;
typedef CR_CRASH_CALLBACK_INFOA CR_CRASH_CALLBACK_INFO;
#define CR_CB_CANCEL             0 
#define CR_CB_DODEFAULT          1 
#define CR_CB_NOTIFY_NEXT_STAGE  2 
typedef int (CALLBACK *PFNCRASHCALLBACKW) (CR_CRASH_CALLBACK_INFOW* pInfo);
typedef int (CALLBACK *PFNCRASHCALLBACKA) (CR_CRASH_CALLBACK_INFOA* pInfo);
typedef PFNCRASHCALLBACKW PFNCRASHCALLBACK;
typedef PFNCRASHCALLBACKA PFNCRASHCALLBACK;
CRASHRPTAPI(int)
crSetCrashCallbackW(   
             PFNCRASHCALLBACKW pfnCallbackFunc,
			 LPVOID lpParam
             );
CRASHRPTAPI(int)
crSetCrashCallbackA(   
             PFNCRASHCALLBACKA pfnCallbackFunc,
			 LPVOID lpParam
             );
#define crSetCrashCallback crSetCrashCallbackW
#define crSetCrashCallback crSetCrashCallbackA
#define CR_HTTP 0  
#define CR_SMTP 1  
#define CR_SMAPI 2 
#define CR_NEGATIVE_PRIORITY ((UINT)-1)
#define CR_INST_STRUCTURED_EXCEPTION_HANDLER      0x1 
#define CR_INST_SEH_EXCEPTION_HANDLER             0x1 
#define CR_INST_TERMINATE_HANDLER                 0x2 
#define CR_INST_UNEXPECTED_HANDLER                0x4 
#define CR_INST_PURE_CALL_HANDLER                 0x8 
#define CR_INST_NEW_OPERATOR_ERROR_HANDLER       0x10 
#define CR_INST_SECURITY_ERROR_HANDLER           0x20 
#define CR_INST_INVALID_PARAMETER_HANDLER        0x40 
#define CR_INST_SIGABRT_HANDLER                  0x80 
#define CR_INST_SIGFPE_HANDLER                  0x100 
#define CR_INST_SIGILL_HANDLER                  0x200 
#define CR_INST_SIGINT_HANDLER                  0x400 
#define CR_INST_SIGSEGV_HANDLER                 0x800 
#define CR_INST_SIGTERM_HANDLER                0x1000 
#define CR_INST_ALL_POSSIBLE_HANDLERS          0x1FFF 
#define CR_INST_CRT_EXCEPTION_HANDLERS         0x1FFE 
#define CR_INST_NO_GUI                         0x2000 
#define CR_INST_HTTP_BINARY_ENCODING           0x4000 
#define CR_INST_DONT_SEND_REPORT               0x8000 
#define CR_INST_APP_RESTART                   0x10000 
#define CR_INST_NO_MINIDUMP                   0x20000 
#define CR_INST_SEND_QUEUED_REPORTS           0x40000 
#define CR_INST_STORE_ZIP_ARCHIVES            0x80000 
#define CR_INST_SEND_MANDATORY				 0x100000 
#define CR_INST_SHOW_ADDITIONAL_INFO_FIELDS	 0x200000 
#define CR_INST_ALLOW_ATTACH_MORE_FILES		 0x400000 
#define CR_INST_AUTO_THREAD_HANDLERS         0x800000 
typedef struct tagCR_INSTALL_INFOW
{
    WORD cb;                        
    LPCWSTR pszAppName;             
    LPCWSTR pszAppVersion;          
    LPCWSTR pszEmailTo;             
    LPCWSTR pszEmailSubject;        
    LPCWSTR pszUrl;                 
    LPCWSTR pszCrashSenderPath;     
    LPGETLOGFILE pfnCrashCallback;  
    UINT uPriorities[5];            
    DWORD dwFlags;                  
    LPCWSTR pszPrivacyPolicyURL;    
    LPCWSTR pszDebugHelpDLL;        
    MINIDUMP_TYPE uMiniDumpType;    
    LPCWSTR pszErrorReportSaveDir;  
    LPCWSTR pszRestartCmdLine;      
    LPCWSTR pszLangFilePath;        
    LPCWSTR pszEmailText;           
    LPCWSTR pszSmtpProxy;           
    LPCWSTR pszCustomSenderIcon;    
	LPCWSTR pszSmtpLogin;           
	LPCWSTR pszSmtpPassword;        
	int nRestartTimeout;            
}
CR_INSTALL_INFOW;
typedef CR_INSTALL_INFOW* PCR_INSTALL_INFOW;
typedef struct tagCR_INSTALL_INFOA
{
    WORD cb;                       
    LPCSTR pszAppName;             
    LPCSTR pszAppVersion;          
    LPCSTR pszEmailTo;             
    LPCSTR pszEmailSubject;        
    LPCSTR pszUrl;                 
    LPCSTR pszCrashSenderPath;     
    LPGETLOGFILE pfnCrashCallback; 
    UINT uPriorities[5];           
    DWORD dwFlags;                 
    LPCSTR pszPrivacyPolicyURL;    
    LPCSTR pszDebugHelpDLL;        
    MINIDUMP_TYPE uMiniDumpType;   
    LPCSTR pszErrorReportSaveDir;  
    LPCSTR pszRestartCmdLine;      
    LPCSTR pszLangFilePath;        
    LPCSTR pszEmailText;           
    LPCSTR pszSmtpProxy;           
    LPCSTR pszCustomSenderIcon;    
	LPCSTR pszSmtpLogin;           
	LPCSTR pszSmtpPassword;        
	int nRestartTimeout;           
}
CR_INSTALL_INFOA;
typedef CR_INSTALL_INFOA* PCR_INSTALL_INFOA;
typedef CR_INSTALL_INFOW CR_INSTALL_INFO;
typedef PCR_INSTALL_INFOW PCR_INSTALL_INFO;
typedef CR_INSTALL_INFOA CR_INSTALL_INFO;
typedef PCR_INSTALL_INFOA PCR_INSTALL_INFO;
CRASHRPTAPI(int)
crInstallW(
           __in PCR_INSTALL_INFOW pInfo
           );
CRASHRPTAPI(int)
crInstallA(
           __in PCR_INSTALL_INFOA pInfo
           );
#define crInstall crInstallW
#define crInstall crInstallA
CRASHRPTAPI(int)
crUninstall();
CRASHRPTAPI(int)
crInstallToCurrentThread2(DWORD dwFlags);
CRASHRPTAPI(int)
crUninstallFromCurrentThread();
#define CR_AF_TAKE_ORIGINAL_FILE  0 
#define CR_AF_MAKE_FILE_COPY      1 
#define CR_AF_FILE_MUST_EXIST     0 
#define CR_AF_MISSING_FILE_OK     2 
#define CR_AF_ALLOW_DELETE        4 
CRASHRPTAPI(int)
crAddFile2W(
            LPCWSTR pszFile,
            LPCWSTR pszDestFile,
            LPCWSTR pszDesc,
            DWORD dwFlags
            );
CRASHRPTAPI(int)
crAddFile2A(
            LPCSTR pszFile,
            LPCSTR pszDestFile,
            LPCSTR pszDesc,
            DWORD dwFlags
            );
#define crAddFile2 crAddFile2W
#define crAddFile2 crAddFile2A
#define CR_AS_VIRTUAL_SCREEN  0  
#define CR_AS_MAIN_WINDOW     1  
#define CR_AS_PROCESS_WINDOWS 2  
#define CR_AS_GRAYSCALE_IMAGE 4  
#define CR_AS_USE_JPEG_FORMAT 8  
#define CR_AS_ALLOW_DELETE   16  
CRASHRPTAPI(int)
crAddScreenshot(
                DWORD dwFlags
                );
CRASHRPTAPI(int)
crAddScreenshot2(
                 DWORD dwFlags,
                 int nJpegQuality
                 );
#define CR_AV_VIRTUAL_SCREEN  0  
#define CR_AV_MAIN_WINDOW     1  
#define CR_AV_PROCESS_WINDOWS 2  
#define CR_AV_QUALITY_LOW     0  
#define CR_AV_QUALITY_GOOD    4  
#define CR_AV_QUALITY_BEST    8  
#define CR_AV_NO_GUI         16  
#define CR_AV_ALLOW_DELETE   32  
CRASHRPTAPI(int)
crAddVideo(
            DWORD dwFlags,
			int nDuration,
			int nFrameInterval,
            PSIZE pDesiredFrameSize,
			HWND hWndParent
            );
CRASHRPTAPI(int)
crAddPropertyW(
               LPCWSTR pszPropName,
               LPCWSTR pszPropValue
               );
CRASHRPTAPI(int)
crAddPropertyA(
               LPCSTR pszPropName,
               LPCSTR pszPropValue
               );
#define crAddProperty crAddPropertyW
#define crAddProperty crAddPropertyA
#define CR_AR_ALLOW_DELETE   0x1  
CRASHRPTAPI(int)
crAddRegKeyW(   
             LPCWSTR pszRegKey,
             LPCWSTR pszDstFileName,
             DWORD dwFlags
             );
CRASHRPTAPI(int)
crAddRegKeyA(   
             LPCSTR pszRegKey,
             LPCSTR pszDstFileName,
             DWORD dwFlags
             );
#define crAddRegKey crAddRegKeyW
#define crAddRegKey crAddRegKeyA
CRASHRPTAPI(int)
crGenerateErrorReport(   
                      __in_opt CR_EXCEPTION_INFO* pExceptionInfo
                      );
CRASHRPTAPI(int)
crExceptionFilter(
                  unsigned int code, 
                  __in_opt struct _EXCEPTION_POINTERS* ep);
#define CR_NONCONTINUABLE_EXCEPTION  32  
#define CR_THROW                     33  
#define CR_STACK_OVERFLOW			 34  
CRASHRPTAPI(int)
crEmulateCrash(
               unsigned ExceptionType); 
CRASHRPTAPI(int)
crGetLastErrorMsgW(
                   __out_ecount_z(uBuffSize) LPWSTR pszBuffer, 
                   UINT uBuffSize);
CRASHRPTAPI(int)
crGetLastErrorMsgA(
                   __out_ecount_z(uBuffSize) LPSTR pszBuffer, 
                   UINT uBuffSize);
#define crGetLastErrorMsg crGetLastErrorMsgW
#define crGetLastErrorMsg crGetLastErrorMsgA